RESOLVED FIXED164012
Fix mach port leak in ResourceUsageThread.
https://bugs.webkit.org/show_bug.cgi?id=164012
Summary Fix mach port leak in ResourceUsageThread.
Andreas Kling
Reported 2016-10-26 06:02:00 PDT
The cpuUsage() helper leaks a mach port.
Attachments
Patch (1.25 KB, patch)
2016-10-26 06:02 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2016-10-26 06:02:47 PDT
WebKit Commit Bot
Comment 2 2016-10-26 06:27:03 PDT
Comment on attachment 292919 [details] Patch Clearing flags on attachment: 292919 Committed r207896: <http://trac.webkit.org/changeset/207896>
WebKit Commit Bot
Comment 3 2016-10-26 06:27:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.