Fix mach port leak in ResourceUsageThread. <https://webkit.org/b/164012>

Reviewed by Antti Koivisto.

The threads returned by task_threads() need to be deallocated.

* page/cocoa/ResourceUsageThreadCocoa.mm:
(WebCore::cpuUsage):


Canonical link: https://commits.webkit.org/181749@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207896 268f45cc-cd09-0410-ab3c-d52691b4dbfc